samples/_failures_safe/1761321236_8d447b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a51f52dd.c: In function ‘main’:
./samples/SAFE/__tmp_a51f52dd.c:172:5: error: expected declaration or statement at end of input
  172 |     size_t len = strlen(input);
      |     ^~~~~~
